[tool.poetry]
name = "todo-list"
version = "0.1.0"
description = "Todo List FastAPI"
authors = ["jthom2 <134821369+jthom2@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.0"
SQLAlchemy = "^2.0.22"
pydantic = "^2.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
